syntax = "proto3";
package kratos.api;

option go_package = "flynoob/bibirt-sock/internal/conf;conf";

message Bootstrap {
  Server server = 1;
}

message Server {
  message Api {
    string addr = 1;
    string appId = 2;
    string appSecret = 3;
  }
  string addr = 1;
  Api api = 2;
}
